[project]
name = "cutmaster"
version = "0.1.0"
description = "Backend-only long-video montage pipeline extracted from the NarratoAI flow."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "librosa>=0.11,<1",
    "loguru>=0.7.3",
    "openai>=1.77.0",
    "opencv-python>=4.10,<5",
    "requests>=2.32.0",
    "scenedetect==0.7.0",
]

[project.scripts]
cutmaster = "cutmaster.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cutmaster"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
